# aurach

./: .gitignore  Cargo.toml  README.md
controller/: Cargo.toml
controller/src/: lib.rs
sql/: ddl_sql.sql
src/: controller.rs  main.rs  model.rs
src/configuration/: response.rs
src/controller/: user_controller.rs
src/db/: mod.rs  mysql_db_pool.rs
src/model/: mod.rs  schema.rs  user_model.rs
src/service/: user_service.rs
storage/: Cargo.toml
storage/src/: lib.rs  parquet_storage.rs  reader.rs  storage.rs  writer.rs
web-server/: Cargo.toml
web-server/src/: main.rs
web-server/src/configuration/: response.rs
web-server/src/controller/: kv_controller.rs  mod.rs  task_info_controller.rs  user_controller.rs
web-server/src/db/: mysql_db_pool.rs
web-server/src/model/: mod.rs  schema.rs  task_info_model.rs  user_model.rs
web-server/src/service/: mod.rs  task_info_service.rs  user_service.rs
