[package]
name = "Aurach"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { varsion = "0.4.10", features = ["json"]}
diesel = { version = "1.4.0", features = ["mysql", "chrono", "numeric"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
storage = { path = "storage", version = "0.1.0" }